# claudestudio

./: .gitignore  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  USERS.md  cs.py  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  discussion_starter.yml  feature_request.md  feature_request.yml  plugin_submission.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  session-summary.yml  stale.yml
claudestudio/: __init__.py  ai_analysis.py  analytics.py  api.py  ask.py  benchmark.py  budget.py  changelog_draft.py  cli.py  clustering.py  collab_annotations.py  compare.py  completions.py  context_analyzer.py  cross_ref.py  digest.py  error_taxonomy.py  export.py  feed.py  file_heatmap.py  fixtures.py  generate_claude_md.py  git_context.py  github_action.py  github_linker.py  health.py  highlights.py  hook.py  index.py  init_wizard.py  live_session.py  mcp.py  model_analytics.py  narrative.py  notebook_export.py  onboarding.py  outcome_trace.py  parser.py  patterns.py  plugin_loader.py  (+18 more)
claudestudio/data/templates/: debug.md  new-feature.md  refactor.md  review.md
claudestudio/web/: app.js  index.html  keyboard.js  manifest.json  styles.css  sw.js  themes.js  tour.js
docs/: ACCESSIBILITY.md  AI_ANALYSIS.md  API.md  ARCHITECTURE.md  AUDIT.md  CLAUDE_CODE_INTEGRATION.md  CLUSTERING.md  COLLAB_ANNOTATIONS.md  COMPLETIONS.md  CONTEXT_ANALYSIS.md  FORMAT.md  GITHUB_ACTIONS.md  HOOK.md  MCP.md  MODEL_ANALYTICS.md  NOTEBOOK_EXPORT.md  PLUGINS.md  PLUGIN_REGISTRY.md  REPLAY.md  SCREENSHOTS.md  SEMANTIC_SEARCH.md  SYNC.md
registry/: plugins.json
registry/plugins/: ascii_report.py  github_status.py  slack_notify.py
tests/: conftest.py  test_analytics.py  test_api.py  test_ask.py  test_export_path.py  test_index.py  test_pricing.py  test_server.py  test_static_path.py  test_v063.py
web/: app.js  index.html  styles.css
