[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claudestudio"
version = "0.6.0"
description = "The desktop workspace for Claude Code — explore, search and replay every session, with a built-in MCP server, tool-usage analytics and smart highlights, locally."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ingrid Toulotte" }]
keywords = ["claude", "claude-code", "anthropic", "mcp", "llm", "developer-tools", "session-browser", "local-first", "analytics", "bookmarks", "hooks", "live-watch", "diff-view", "report", "budget-tracker", "claude-md-generator", "session-annotations", "health-score", "prompt-library"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = []  # zero — standard library only

# Dev-only tooling. The shipped package stays zero-dependency; these are just for
# contributors: `pip install -e ".[dev]"` then `pytest`, `ruff check`, `mypy`.
[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/ingridtoulotte/claudestudio"
Repository = "https://github.com/ingridtoulotte/claudestudio"
Issues = "https://github.com/ingridtoulotte/claudestudio/issues"
Documentation = "https://github.com/ingridtoulotte/claudestudio/tree/main/docs"
Changelog = "https://github.com/ingridtoulotte/claudestudio/blob/main/CHANGELOG.md"

[project.scripts]
claudestudio = "claudestudio.cli:main"
cs = "claudestudio.cli:main"
claudestudio-mcp = "claudestudio.mcp:main"

[tool.setuptools]
packages = ["claudestudio"]
include-package-data = true

# The web/ assets live inside the package so they ship in the wheel — this is
# what lets `pipx run --spec git+…/claudestudio claudestudio` work with no clone.
# `py.typed` ships the PEP 561 marker so downstream type checkers trust our hints.
[tool.setuptools.package-data]
claudestudio = ["web/**/*", "web/*", "web/assets/*", "py.typed"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# E501 (line length) is advisory here; the codebase predates a formatter pass.
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
# Gradual typing: enforce hints where they're declared (the public parser/pricing
# API is fully annotated) without descending into not-yet-typed legacy bodies.
# Raise the bar over time by annotating a module then adding it to `strict`.

# The zero-dep self-test runner is test scaffolding: it deliberately pokes at
# values the type checker can't narrow (e.g. parse_file()'s Optional result after
# a runtime assert). It's exercised end-to-end by CI, not the type gate.
[[tool.mypy.overrides]]
module = "claudestudio.selftest"
ignore_errors = true
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
